change index src

--- a/example.html
+++ b/example.html
@@ -40,7 +40,7 @@
         </div>
         <div class="sandboxPreview" id="sandboxPreview4"></div>     
     </main>
-    <script src="/index.js"></script>
+    <script src="https://github.com/alex-vdboogaard/pop/blob/main/pop.js"></script>
     <script>
         document.querySelector("#simpleSuccess").addEventListener("click", () => {
             const successMessage = document.querySelector("#simplePopTextSuccess").value;
