--- a/example.html
+++ b/example.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/example.css">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="https://github.com/alex-vdboogaard/pop/blob/main/pop.css">
 </head>
 <body>
     <main>
