--- a/example.html
+++ b/example.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/example.css">
-    <link rel="stylesheet" href="https://github.com/alex-vdboogaard/pop/blob/main/pop.css">
+    <link rel="stylesheet" href="https://alex-vdboogaard.github.io/pop/pop.css">
 </head>
 <body>
     <main>
@@ -40,7 +40,7 @@
         </div>
         <div class="sandboxPreview" id="sandboxPreview4"></div>     
     </main>
-    <script src="https://github.com/alex-vdboogaard/pop/blob/main/pop.js"></script>
+    <script src="https://alex-vdboogaard.github.io/pop/pop.js"></script>
     <script>
         document.querySelector("#simpleSuccess").addEventListener("click", () => {
             const successMessage = document.querySelector("#simplePopTextSuccess").value;
