--- a/example.html
+++ b/example.html
@@ -10,32 +10,31 @@
 <body>
     <main>
         <h1>Example usage</h1>
-        <p style="margin-bottom: 50px; font-size: 25px; margin-top: 8px;">Type a typical message you would show to a user.</p>
-        
-        <h2 class="description">Success message</h2>
+        <p class="subheading">Type a typical message you would show to a user.</p>
+        <h2>Success message</h2>
         <div class="example-div">
-            <input type="text" id="simplePopTextSuccess">
+            <input class="example-input" type="text" id="simplePopTextSuccess">
             <button id="simpleSuccess" class="example-button">Success message</button>
         </div>
         <div class="sandboxPreview" id="sandboxPreview1"></div>
 
-        <h2 class="description">Error message</h2>
+        <h2>Error message</h2>
         <div class="example-div">
-            <input type="text" id="simplePopTextError">
+            <input class="example-input" type="text" id="simplePopTextError">
             <button id="simpleError" class="example-button">Error message</button>
         </div>
         <div class="sandboxPreview" id="sandboxPreview2"></div>
 
-        <h2 class="description">Confirmation popup</h2>
+        <h2>Confirmation popup</h2>
         <div class="example-div">
-            <input type="text" id="confirmText">
+            <input class="example-input" type="text" id="confirmText">
             <button id="confirm" class="example-button">Confirm</button>
         </div>
         <div class="sandboxPreview" id="sandboxPreview3"></div>        
 
-        <h2 class="description">Input popup</h2>
+        <h2>Input popup</h2>
         <div class="example-div">
-            <input type="text" id="inputForm">
+            <input class="example-input" type="text" id="inputForm">
             <button id="input" class="example-button">Get input</button>
         </div>
         <div class="sandboxPreview" id="sandboxPreview4"></div>     
