--- a/example.html
+++ b/example.html
@@ -35,11 +35,17 @@
 
         <h3>Input popup</h3>
         <div class="example-div">
-            <input class="example-input" type="text" id="inputForm">
-            <button id="input" class="example-button">Get input</button>
+            <input class="example-input" type="text" id="inputForm1">
+            <button id="input1" class="example-button">Get input</button>
         </div>
         <div class="sandboxPreview" id="sandboxPreview4"></div>     
-        <h2>Fancy popups</h2>
+
+        <h3>Multiple input popup</h3>
+        <div class="example-div">
+            <input class="example-input" type="text" id="inputForm2">
+            <button id="input2" class="example-button">Get multiple input</button>
+        </div>
+        <div class="sandboxPreview" id="sandboxPreview5"></div>    
     </main>
     <script src="https://alex-vdboogaard.github.io/pop/pop.js"></script>
     <script>
@@ -73,14 +79,31 @@
                 simplePop("error", "The user cancelled, 'false' was returned to the function")
             }
         })
-        document.querySelector("#input").addEventListener("click", async() => {
-            const inputMessage = document.querySelector("#inputForm").value;
+        document.querySelector("#input1").addEventListener("click", async() => {
+            const inputMessage = document.querySelector("#inputForm1").value;
             let input;
             if (inputMessage) {
                 input = await inputPop(inputMessage);
             }
             else {
                 input = await inputPop("What's your name?");
+            };
+            if (input) {
+                simplePop("success", `"${input}" was returned to the variable`)
+            }
+            else {
+                simplePop("error", `"${input}" was returned to the variable`)
+            }
+            
+        })
+        document.querySelector("#input2").addEventListener("click", async() => {
+            const inputMessage = document.querySelector("#inputForm2").value;
+            let input;
+            if (inputMessage) {
+                input = await inputPops(inputMessage);
+            }
+            else {
+                input = await inputPops([{name:"What's your name?"}, {surname:"Surname?"}]);
             };
             if (input) {
                 simplePop("success", `"${input}" was returned to the variable`)
