fix css stylesheet link in example.html

--- a/example.html
+++ b/example.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pop!</title>
-    <link rel="stylesheet" href="/example.css">
-    <link rel="stylesheet" href="/pop.css">
+    <link rel= "stylesheet" href="https://alex-vdboogaard.github.io/pop/example.css>">
+    <link rel= "stylesheet" href="https://alex-vdboogaard.github.io/pop/pop.css>">
 </head>
 <body>
     <main>
@@ -47,7 +47,7 @@
         </div>
         <div class="sandboxPreview" id="sandboxPreview5"></div>    
     </main>
-    <script src="pop.js"></script>
+    <script src="https://alex-vdboogaard.github.io/pop/pop.js"></script>
     <script>
         document.querySelector("#simpleSuccess").addEventListener("click", () => {
             const successMessage = document.querySelector("#simplePopTextSuccess").value;
