--- a/example.html
+++ b/example.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pop!</title>
-    <link rel= "stylesheet" href="https://alex-vdboogaard.github.io/pop/example.css>">
-    <link rel= "stylesheet" href="https://alex-vdboogaard.github.io/pop/pop.css>">
+    <link rel= "stylesheet" href="https://alex-vdboogaard.github.io/pop/example.css">
+    <link rel= "stylesheet" href="https://alex-vdboogaard.github.io/pop/pop.css">
 </head>
 <body>
     <main>
