fix sandbox preview of multiple inputs

--- a/example.html
+++ b/example.html
@@ -153,7 +153,7 @@
         inputInput.addEventListener("input", updatePreview);
         multipleInput.addEventListener("input", updatePreview);
         updatePreview();
-        sandboxPreview5.innerText = `const multipleInput = await inputPops("[{name:"What's your name?"}, {surname:"Surname?"}]")`
+        sandboxPreview5.innerText = `const multipleInput = await inputPops([{"name":"What's your name?"}, {"surname":"Surname?"}])`
     </script>
 </body>
 </html>
