fix example.html css headings

--- a/example.html
+++ b/example.html
@@ -40,7 +40,8 @@
         </div>
         <div class="sandboxPreview" id="sandboxPreview4"></div>     
 
-        <h3>Multiple input popup</h3>
+        <h2>More advanced popups</h2>
+        <h3>Multiple inputs popup</h3>
         <div class="example-div">
             <input class="example-input" type="text" id="inputForm2">
             <button id="input2" class="example-button">Get multiple input</button>
